--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
   </head>
   <body>
-    <div id="app" style="height: 100%; width: 100%"><!--app-html--></div>
+    <div id="app"><!--app-html--></div>
     <script type="module" src="/src/client/entry-client.tsx"></script>
   </body>
 </html>
