--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!--react-helmet-->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -8,6 +9,9 @@
       name="viewport"
     />
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
+    <style>
+      /* app-style */
+    </style>
   </head>
   <body>
     <div id="app"><!--app-html--></div>
