chore: add react-redux

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <div id="app"><!--app-html--></div>
+    <!--init-state-->
     <script type="module" src="/src/client/entry-client.tsx"></script>
   </body>
 </html>
