--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       name="viewport"
     />
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
+    <link href="https://cdn.bootcdn.net/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <style>
       /* app-style */
     </style>
